argocd/example-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-example-app-service
spec:
  type: NodePort
  selector:
    app: argocd-example-app
  ports:
    - port: 80
      targetPort: 8080
