argocd/example-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    ingress.cilium.io/loadbalancer-mode: shared
  name: example-app
  namespace: default
spec:
  rules:
  - host: example-app.argocd.test
    http:
      paths:
      - backend:
          service:
            name: argocd-example-app-service
            port:
                number: 80
        path: /
        pathType: Prefix
